--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^6.0.70",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-notify": "^3.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.0.0",
     "gulp-typescript": "^3.1.6",
