--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^2.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.0.35",
     "@types/mocha": "^2.2.41",
     "@types/node": "^6.0.70",
     "del": "^2.2.2",
