--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,12 @@
     "removeComments": false,
     "module": "commonjs",
     "moduleResolution": "node",
-    "sourceMap": true
-  }
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true
+  } ,
+  "exclude": [
+    "src",
+    "node_modules"
+  ]
 }
