--- a/package.json
+++ b/package.json
@@ -8,26 +8,39 @@
     "watch": "gulp watch",
     "test": "gulp test",
     "clean": "gulp clean",
-    "prepublish": "gulp build"
+    "prepublish": "gulp build",
+    "webpack": "gulp webpack"
   },
   "author": "akimasa",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^2.2.2"
+    "typescript": "^2.2.2",
+    "vue": "^2.3.0",
+    "vue-class-component": "^5.0.1",
+    "vue-router": "^2.5.3",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.0.35",
     "@types/mocha": "^2.2.41",
     "@types/node": "^6.0.70",
+    "css-loader": "^0.28.0",
     "del": "^2.2.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-mocha": "^4.3.1",
     "gulp-notify": "^3.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.0.0",
     "gulp-typescript": "^3.1.6",
+    "html-webpack-plugin": "^2.28.0",
     "merge2": "^1.0.3",
+    "ts-loader": "^2.0.3",
     "tslint": "^5.1.0",
-    "typescript": "^2.2.2"
+    "typescript": "^2.2.2",
+    "vue-template-compiler": "^2.3.0",
+    "vue-template-loader": "^0.3.1",
+    "webpack": "^2.4.1",
+    "webpack-stream": "^3.2.0"
   }
 }
