--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -7,5 +7,8 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": [
+    "./"
+  ]
 }
