--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.0.35",
     "@types/mocha": "^2.2.41",
     "@types/node": "^6.0.70",
+    "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.0",
     "del": "^2.2.2",
     "extract-text-webpack-plugin": "^2.1.0",
