--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "akimasa",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
     "typescript": "^2.2.2",
     "vue": "^2.3.0",
     "vue-class-component": "^5.0.1",
