add utils.getApi utils.postAPI

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -6,6 +6,12 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "lib": [
+      "es2015.promise",
+      "dom",
+      "es5",
+      "scripthost"
+    ]
   }
 }
