--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp": "^3.9.1",
     "gulp-mocha": "^4.3.1",
     "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.0.0",
     "gulp-typescript": "^3.1.6",
