--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,7 +23,17 @@
             "taskName": "build",
             "args": ["run", "build"],
             "isBuildCommand": true,
-            "problemMatcher": ["$tsc", "$tslint5"]
+            "problemMatcher": [
+                        {
+                            "pattern": {
+                                "regexp": "\\[Error running Gulp\\] ^([^\\s].*)\\((\\d+|\\d+,\\d+|\\d+,\\d+,\\d+,\\d+)\\):\\s+(error|warning|info)\\s+(TS\\d+)\\s*:\\s*(.*)$",
+                                "file": 1,
+                                "location": 2,
+                                "severity": 3,
+                                "code": 4,
+                                "message": 5
+                            }
+                        }, "$tslint5"]
         },
         {
             "taskName": "webpack",
