--- a/package.json
+++ b/package.json
@@ -16,38 +16,39 @@
   "author": "akimasa",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "compression": "^1.6.2",
-    "express": "^4.15.2",
-    "typescript": "^2.2.2",
-    "vue": "^2.3.0",
-    "vue-class-component": "^5.0.1",
-    "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "express": "^4.16.3",
+    "typescript": "^3.0.3",
+    "vue": "^2.5.17",
+    "vue-class-component": "^6.2.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.0.35",
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^6.0.70",
-    "compression-webpack-plugin": "^0.4.0",
-    "css-loader": "^0.28.0",
-    "del": "^2.2.2",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.9.4",
+    "compression-webpack-plugin": "^1.1.12",
+    "css-loader": "^1.0.0",
+    "del": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^4.3.1",
+    "gulp-mocha": "^6.0.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.0.0",
-    "gulp-typescript": "^3.1.6",
-    "html-webpack-plugin": "^2.28.0",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "html-webpack-plugin": "^3.2.0",
     "merge2": "^1.0.3",
-    "ts-loader": "^2.0.3",
+    "ts-loader": "^4.5.0",
     "tslint": "^5.1.0",
-    "typescript": "^2.2.2",
-    "vue-template-compiler": "^2.3.0",
-    "vue-template-loader": "^0.3.1",
-    "webpack": "^2.4.1",
-    "webpack-stream": "^3.2.0"
+    "typescript": "^3.0.3",
+    "vue-loader": "^15.4.1",
+    "vue-template-compiler": "^2.5.17",
+    "vue-template-loader": "^1.0.0",
+    "webpack": "^4.17.1",
+    "webpack-stream": "^5.1.1"
   }
 }
