--- a/package.json
+++ b/package.json
@@ -17,38 +17,37 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "compression": "^1.7.3",
-    "express": "^4.16.3",
-    "typescript": "^3.0.3",
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.2.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "compression": "^1.7.4",
+    "express": "^4.16.4",
+    "vue": "^2.6.9",
+    "vue-class-component": "^7.0.1",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.9.4",
-    "compression-webpack-plugin": "^1.1.12",
-    "css-loader": "^1.0.0",
-    "del": "^3.0.0",
+    "@types/express": "^4.16.1",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.11.3",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^2.1.1",
+    "del": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-mocha": "^6.0.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-tslint": "^8.0.0",
-    "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-tslint": "^8.1.4",
+    "gulp-typescript": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "merge2": "^1.0.3",
-    "ts-loader": "^4.5.0",
-    "tslint": "^5.1.0",
-    "typescript": "^3.0.3",
-    "vue-loader": "^15.4.1",
-    "vue-template-compiler": "^2.5.17",
+    "merge2": "^1.2.3",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.14.0",
+    "typescript": "^3.3.3333",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.9",
     "vue-template-loader": "^1.0.0",
-    "webpack": "^4.17.1",
-    "webpack-stream": "^5.1.1"
+    "webpack": "^4.29.6",
+    "webpack-stream": "^5.2.1"
   }
 }
